<resources>
    <string name="app_name">Daudi</string>

    <string name="title_processing">Processing</string>
    <string name="title_queued">Queued</string>
    <string name="title_loading">Loading</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="strLang">en</string>
    <string name="actual_pms_amount_loaded">Actual (PMS) Amount Loaded</string>
    <string name="actual_ago_amount_loaded">Actual (AGO) Amount Loaded</string>
    <string name="actual_ik_amount_loaded">Actual (IK) Amount Loaded</string>
    <string name="provide_seal_number_range">Provide Seal Number Range</string>
    <string name="provide_broken_seals">Provide Broken Seals</string>
    <string name="delivery_note_number">Delivery Note Number</string>
    <string name="cancel">cancel</string>
    <string name="submit">SUBMIT</string>
    <string name="exit_request">PLEASE ALLOW THE ABOVE TRUCK TO EXIT THE DEPOT</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="step_1_connect_your_bluetooth_printer">STEP 1 : Connect your Bluetooth Printer</string>
    <string name="step_2_print_your_reciept">STEP 2 : Print your Reciept</string>
    <string name="search">search</string>
    <string name="close">close</string>
    <string name="step_3">STEP 3 : Close Phone to Printer Connection</string>
    <string name="reprint">Reprint Your Receipt</string>
    <string name="test_print">Test Print</string>
    <string name="pms_averange">PMS AVERAGE</string>
    <string name="ago_averange">AGO AVERAGE</string>
    <string name="ik_averange">IK AVERAGE</string>
    <string name="take_picture">Take Picture</string>
    <string name="take_image">Take Image</string>
    <string name="print">print</string>
    <string name="add_depot_request">Please ask the management to assign you to a particular Depot</string>
    <string name="logout">Logout</string>
</resources>
