<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/step_1_connect_your_bluetooth_printer"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/search"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/step_2_print_your_reciept"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/btn_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:enabled="false"
                    android:text="@string/print"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/step_3"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/btnClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/close"/>

            <Button
                    android:id="@+id/btnSandbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/test_print"
                    android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>